@@ -5,6 +5,7 @@
 - Change license to GPL v2+ (same as nml) instead of v3 to allow reusing v2 code/resources.
 - Fix graphics sprite composition.
 - Fix Train weight Action 0 properties (low and high bytes).
+- Fix compilation of generic var parameter in Action 2.
 
 - Use `AlternativeSprites` instead of sprite tuples.
 - Add Action0 properties for road types.
